# drug-traceability

./: README.md
client/: package-lock.json
client/app/: layout.tsx  page.tsx
client/app/components/Banner/: index.tsx
client/app/components/Faq/: index.tsx
client/app/components/Features/: index.tsx
client/app/components/Navbar/: Navbar.tsx
client/app/components/Simple/: index.tsx
client/app/components/Trade/: index.tsx
client/app/components/Work/: index.tsx
server/: .gitignore  README.MD  pyproject.toml
server/accounts/: auth.py  urls.py  views.py
server/server/: asgi.py  settings.py  urls.py  wsgi.py
