[tool.poetry]
name = "server"
version = "0.1.0"
description = "A backend server for a drug traceability using blockchain technology"
authors = ["Abhishek Kashyap <abhik5567@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-cors-headers = "^4.4.0"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
django-silk = "^5.2.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
